Fixed slim header wrapping in logged in state.

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -575,7 +575,7 @@ ul#top-follow li a {
 #slim-header #nav-wrap {
     background: none;
     float: left;
-    min-width: 572px;
+    min-width: 566px;
     margin-left: 50px;
 }
 
